--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -7,10 +7,10 @@
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
 $body-bg:                 $light-gray;
-$font-size-base: 18px;
+// $font-size-base: 18px;
 
 // Colors
-$gray-base:       $gray;
+// $gray-base:       $gray;
 $brand-primary:   $blue;
 $brand-success:   $green;
 $brand-info:      $yellow;
