--- a/app/views/shared/_navbar_croker_logged_in.html.erb
+++ b/app/views/shared/_navbar_croker_logged_in.html.erb
@@ -1,3 +1,12 @@
 <div class="navbar-croker">
+  <div class="navbar-left">
+    <%= image_tag 'logo', class: "logo" %>
+    <div class="tabs">
+      <h2 class="tab active">Dashboard</h2>
+      <h2 class="tab">Buy/Sell</h2>
+    </div>
+  </div>
+  <div class="navbar-right">
 
+  </div>
 </div>
