--- a/app/views/shared/_navbar_croker_sign_up.html.erb
+++ b/app/views/shared/_navbar_croker_sign_up.html.erb
@@ -7,12 +7,11 @@
     </div>
   </div>
   <div class="navbar-right">
-    <div class="navbar-balances">
-      <h4>Available Balance: <span id="available-balance">$80.00</span></h4>
-      <h4>Portfolio Value: <span id="portfolio-value">$63.21</span></h4>
+    <div class="btn-sign-up">
+      <a href="#" class="sign-up btn btn-success">Sign Up</a>
     </div>
-    <div class="btn-deposit">
-      <a href="#" class="deposit btn btn-success">Deposit</a>
+    <div class="btn-login">
+      <a href="#" class="login btn">Login</a>
     </div>
     <div class="navbar-settings">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
