--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
   <body>
     <%= render 'shared/navbar_croker_logged_in' %>
+    <%= render 'shared/navbar_croker_sign_up' %>
     <%= render 'shared/flashes' %>
+    <%= render 'dashboard/dashboard' %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
