--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -17,7 +17,7 @@
           <span class="positive content-headline-figure text-center">+50.83%</span>
         </div>
         <div class="change-timescale">
-          <h4>1D 1W 1M 1Y ALL</h4>
+          <h4>1D <span class="selected">1W</span> 1M 1Y ALL</h4>
         </div>
       </div>
       <!-- #################################### -->
@@ -105,6 +105,148 @@
         <div class="portfolio-profit-loss">
           <h4>Profit/Loss</h4>
         </div>
+      </div>
+      <div class="crypto-rows">
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>1</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'BTC', class: "portfolio-icon" %>
+            <h4>Bitcoin <span class="crypto-code">BTC</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$3,234.02</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$100.34</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="positive">$10.12</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>2</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'XMR', class: "portfolio-icon" %>
+            <h4>Monero <span class="crypto-code">XMR</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$78.90</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$1,030.34</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="positive">$500.73</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>3</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'BCH', class: "portfolio-icon" %>
+            <h4>Bitcoin Cash <span class="crypto-code">BCH</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$120.74</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$23.76</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="negative">$38.09</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>4</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'USDT', class: "portfolio-icon" %>
+            <h4>Tehter <span class="crypto-code">USDT</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$23.77</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$189.99</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="positive">$2.99</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>5</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'ETH', class: "portfolio-icon" %>
+            <h4>Ethereum <span class="crypto-code">ETH</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$1.88</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$409.65</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="negative">$28.99</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        Row for each crypto here
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>6</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'XLM', class: "portfolio-icon" %>
+            <h4>Stellar <span class="crypto-code">XLM</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$88.87</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$10.66</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="negative">$9.76</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
+        <!-- Row for each crypto here -->
+        <div class="portfolio-crypto portfolio-row">
+          <div class="portfolio-rank crypto-rank">
+            <h4>7</h4>
+          </div>
+          <div class="portfolio-name crypto-name">
+            <%= image_tag 'XRP', class: "portfolio-icon" %>
+            <h4>Ripple <span class="crypto-code">XRP</span></h4>
+          </div>
+          <div class="portfolio-price crypto-price">
+            <h4>$0.87</h4>
+          </div>
+          <div class="portfolio-value-held crypto-value-held">
+            <h4>$390.88</h4>
+          </div>
+          <div class="portfolio-profit-loss crypto-profit-loss">
+            <h4><span class="positive">$130.12</span></h4>
+          </div>
+        </div>
+        <!-- Row for each crypto here -->
       </div>
     </div>
   </div>
