--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -42,7 +42,6 @@
   display: flex;
   align-items: center;
   margin: 10px;
-  // padding-bottom: 15px;
 }
 
 .title-icon {
@@ -64,6 +63,39 @@
     margin: 0;
     padding: 3px 5px 3px 10px;
   }
+}
+
+// No coins section styling
+.no-coins-dashboard {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.no-coins-message {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 400px;
+}
+
+.sad-croker {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 120px;
+  height: 120px;
+}
+
+.buy-coins {
+  padding: 10px 20px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-radius: 4px;
 }
 
 // First box styling
