--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -33,7 +33,7 @@
 
 .dashboard-field {
   background-color: white;
-  box-shadow: 1px 1px 50px rgba(0,0,0,0.3);
+  // box-shadow: 1px 1px 50px rgba(0,0,0,0.1);
   border-radius: 1px;
 }
 
