Small changes to the index page

--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -1,6 +1,6 @@
 <div class="car-card-title">
   <div class="green-line">
-    <%= image_tag "Bitcoin.png", class: "crypto-logo-show" %>
+    <%= image_tag "BTC", class: "crypto-logo-show" %>
   </div>
   <h3 class="title-show">Bitcoin</h3>
 </div>
