made show page more dinamic

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="dashboard-wrapper">
-  <% if false %>
+  <% if true %>
   <div class="dashboard-row-wrapper">
     <div class="dashboard-container">
       <div class="no-coins-dashboard dashboard-field">
