--- a/app/views/trades/show.html.erb
+++ b/app/views/trades/show.html.erb
@@ -6,7 +6,7 @@
 </div>
 <!-- This is where we show the price of the coin -->
 <div class="price-wrapper">
-  <h3>$<%= @live_prices[@cryptocurrency.ticker_name][@cryptocurrency.ticker_code] %></h3>
+  <h3>$<%= @live_price %></h3>
 </div>
 <div class="chart-wrapper">
 </div>
