REFACTORED THE WHOLE ROUTES STUFF FOR FUTURE WORK
GENERATED A NEW CRYPTOCURRENCY CONTROLLER
MOVED THE INDEX AND SHOW TO CRYPTOCURRENCY CONTROLLER INSTEAD OF BEING IN TRADES
DELETED INDEX AND SHOW INSIDE TRADES VIEW FOLDERS
ADDED INDEX AND SHOW INSIDE CRYPTOCURRENCY VIEW FOLDERS

GUYS PLEASE DOUBLECHECK ALL YOUR ROUTES
AND MAKE SURE TO UPDATE TO THE RIGHT PATHES.
CHEERS

--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -22,7 +22,7 @@
       <div class="scrollable-crypto-list">
 
         <% @cryptocurrencies.each do |crypto| %>
-        <%= link_to trade_path(crypto) do %>
+        <%= link_to cryptocurrency_path(crypto) do %>
 
         <div class="product">
           <%= image_tag crypto.ticker_code, class: "product-image" %>
