--- a/app/views/shared/_navbar_croker_logged_in.html.erb
+++ b/app/views/shared/_navbar_croker_logged_in.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-left">
     <%= image_tag 'logo', class: "logo" %>
     <div class="tabs">
-      <a href="#"><h2 class="tab active">Dashboard</h2></a>
+      <%= link_to 'Dashboard', dashboard_path, class: 'tab active', style: 'font-size: 20px' %>
       <a href="#"><h2 class="tab">Buy/Sell</h2></a>
     </div>
   </div>
