--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -7,7 +7,7 @@
   <div class=“form-inline text-center”><%= f.input :cryptocurrency_amount, as: :decimal %></div>
   <div class=“form-inline text-center”><%= f.input :fiat_amount_cents, as: :integer%></div>
   <div class=“form-inline text-center”><%= f.input :fiat_price_cents, as: :integer%></div>
-  <div class=“form-inline text-center”><%= f.input :transaction_type, as: :integer%></div>
+  <div class=“form-inline text-center”><%= f.input :transaction_type, collection: Trade.list_transaction_types %></div>
   <%# f.hidden_field :title, value: “some value” %>
   <h4 class= “text-center”>Price:</h4><h4 id= “rent-price”><strong></strong></h4>
   <%= f.button :submit, class: "btn btn-success" %>
