Latest efforts on highcharts - going for a run

--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -1,1 +1,3 @@
-<%= area_chart @data, colors: ["#60cd44", "#666"], curve: false, points: false %>
+<div id="chart-1" style="height: 300px">
+  <%= area_chart @data, curve: false, points: false %>
+</div>
