removed an extra - from top5 losers in the dashboard and round(2) to index

--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -32,7 +32,7 @@
           </div>
           <ul class="list-inline product-controls">
             <li>
-              <%= @live_prices[crypto.ticker_name][crypto.ticker_code] %>
+              <%= @live_prices[crypto.ticker_name][crypto.ticker_code].round(4) %>
               <%= CryptoCompareService::FIAT_CURRENCIES %>
             </li>
             <li>$4.321</li>
