Added deposit link to navbar button

--- a/app/views/shared/_navbar_croker_logged_in.html.erb
+++ b/app/views/shared/_navbar_croker_logged_in.html.erb
@@ -12,7 +12,7 @@
       <h4>Portfolio Value: <span id="portfolio-value">$63.21</span></h4>
     </div>
     <div class="btn-deposit">
-      <a href="#" class="deposit btn btn-success">Deposit</a>
+      <%= link_to 'Deposit', new_top_up_path, class: "deposit btn btn-success" %>
     </div>
     <div class="navbar-settings">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
