--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -5,7 +5,7 @@
       <div class="no-coins-dashboard dashboard-field">
         <div class="no-coins-message">
           <h1 class="text-center">It looks like you don't have any coins...</h1>
-          <%= image_tag 'sad_croker', class: "sad-croker"%>
+          <%= image_tag 'sad_croker.png', class: "sad-croker"%>
           <h1>Let's change that shall we?</h1>
           <a href="#" class="btn btn-success buy-coins">Buy Coins Now</a>
         </div>
@@ -24,14 +24,14 @@
         <div class="portfolio-change">
           <div class="title">
             <div class="title-icon">
-              <%= image_tag 'title_icon', class: "icon" %>
+              <%= image_tag 'title_icon.png', class: "icon" %>
             </div>
             <div class="title-header">
               <h2>Portfolio Change</h2>
             </div>
           </div>
           <div class="change-content">
-            <%= image_tag 'launch', class: "portfolio-image launch" %>
+            <%= image_tag 'launch.png', class: "portfolio-image launch" %>
             <span class="positive content-headline-figure text-center">+50.83%</span>
           </div>
           <div class="change-timescale">
