--- a/app/views/shared/_navbar_croker_sign_up.html.erb
+++ b/app/views/shared/_navbar_croker_sign_up.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar-croker">
   <div class="navbar-left">
-    <%= image_tag 'logo', class: "logo" %>
+    <%= image_tag 'logo.png', class: "logo" %>
     <div class="tabs">
       <%= link_to 'Dashboard', dashboard_path, class: 'tab active', style: 'font-size: 20px' %>
       <a href="#"><h2 class="tab">Buy/Sell</h2></a>
