Achieved the format we want with highcharts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Croker</title>
-    <%= favicon_link_tag 'favicon.ico' %>
-    <%= csrf_meta_tags %>
-    <%= action_cable_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_pack_tag 'application' %>
-  </head>
-  <body>
-    <% if current_user %>
-      <%= render 'shared/navbar_croker_logged_in' %>
-    <% else %>
-      <%= render 'shared/navbar_croker_sign_up' %>
-    <% end %>
-    <%= render 'shared/flashes' %>
-    <%= yield %>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Croker</title>
+  <%= favicon_link_tag 'favicon.ico' %>
+  <%= csrf_meta_tags %>
+  <%= action_cable_meta_tag %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/series-label.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_pack_tag 'application' %>
+</head>
+<body>
+  <% if current_user %>
+  <%= render 'shared/navbar_croker_logged_in' %>
+  <% else %>
+  <%= render 'shared/navbar_croker_sign_up' %>
+  <% end %>
+  <%= render 'shared/flashes' %>
+  <%= yield %>
 
-    <%= render 'shared/slim_footer' %>
-  </body>
+  <%= render 'shared/slim_footer' %>
+</body>
 </html>
