--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -101,7 +101,12 @@
   margin-left: 5px;
 }
 
-.navbar-settings i {
+.dropdown i {
   font-size: 24px;
   color: #b7b7b7;
+}
+
+.btn-settings {
+  border: none;
+  background-color: white;
 }
