--- a/app/views/shared/_navbar_croker_logged_in.html.erb
+++ b/app/views/shared/_navbar_croker_logged_in.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar-croker">
   <div class="navbar-left">
+    <%= link_to :root do %>
     <%= image_tag 'logo.png', class: "logo" %>
+    <% end %>
     <div class="tabs">
       <%= link_to 'Dashboard', dashboard_path, class: 'tab active', style: 'font-size: 20px' %>
       <a href="#"><h2 class="tab">Buy/Sell</h2></a>
@@ -21,9 +23,7 @@
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
         <li><a href="#">My Profile</a></li>
         <li><a href="#">Settings</a></li>
-        <%= link_to destroy_user_session_path do %>
-        <li><a href="#">Log Out</a></li>
-        <% end %>
+        <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
       </ul>
     </div>
   </div>
