--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -1,1 +1,40 @@
+<%=@data.last[1] %>
+<%=@cryptocurrency.ticker_code %>
 <%= area_chart @data, colors: ["#60cd44", "#666"], curve: false, points: false %>
+
+
+<!-- var data = [trace1,trace2];
+
+var layout = {
+  title: 'Time Series with Rangeslider',
+  xaxis: {
+    autorange: true,
+    range: ['2015-02-17', '2017-02-16'],
+    rangeselector: {buttons: [
+        {
+          count: 1,
+          label: '1m',
+          step: 'month',
+          stepmode: 'backward'
+        },
+        {
+          count: 6,
+          label: '6m',
+          step: 'month',
+          stepmode: 'backward'
+        },
+        {step: 'all'}
+      ]},
+      rangeslider: {range: ['2015-02-17', '2017-02-16']},
+    type: 'date'
+  },
+  yaxis: {
+    autorange: true,
+    range: [86.8700008333, 138.870004167],
+    type: 'linear'
+  }
+};
+
+Plotly.newPlot('myDiv', data, layout);
+})
+ -->
