--- a/app/views/trades/new.html.erb
+++ b/app/views/trades/new.html.erb
@@ -8,8 +8,10 @@
   <div class=“form-inline text-center”><%= f.input :fiat_amount_cents, as: :integer%></div>
   <div class=“form-inline text-center”><%= f.input :fiat_price_cents, as: :integer%></div>
   <div class=“form-inline text-center”><%= f.input :transaction_type, collection: Trade.list_transaction_types %></div>
-  <%# f.hidden_field :title, value: “some value” %>
-  <h4 class= “text-center”>Price:</h4><h4 id= “rent-price”><strong></strong></h4>
   <%= f.button :submit, class: "btn btn-success" %>
  <% end %>
 </div>
+
+
+<%#= f.hidden_field :transaction_type, value: buy %>
+<%#= f.hidden_field :transaction_type, value: sell %>
