--- a/app/views/cryptocurrencies/_grayed_show.html.erb
+++ b/app/views/cryptocurrencies/_grayed_show.html.erb
@@ -1,12 +1,13 @@
+<div class="overlay"></div>
 <div class="car-card-title">
   <div class="green-line">
-    <%= image_tag @cryptocurrency.ticker_code, class: "crypto-logo-show" %>
+    <%= image_tag 'title_icon.png', class: "crypto-logo-show" %>
   </div>
-  <h3 class="title-show"><%=  %></h3>
+  <h3 class="title-show"></h3>
 </div>
 <!-- This is where we show the price of the coin -->
 <div class="price-wrapper">
-  <h3>$<%= @live_price %></h3>
+  <h3>$ 00.00</h3>
 </div>
 <div class="chart-wrapper">
 </div>
