fixed a bug created by a github merge

--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -31,7 +31,7 @@
       <div class="scrollable-crypto-list">
 
         <% @cryptocurrencies.each do |crypto| %>
-        <%= link_to cryptocurrency_path(crypto) do %>
+        <%= link_to cryptocurrencies_path(crypto_id: crypto.id) do %>
 
         <div class="product">
           <%= image_tag "#{crypto.ticker_code}.png", class: "product-image" %>
