--- a/app/views/cryptocurrencies/call_chart.html.erb
+++ b/app/views/cryptocurrencies/call_chart.html.erb
@@ -1,57 +1,13 @@
-  <script src="https://code.highcharts.com/highcharts.js"></script>
+<!--   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/series-label.js"></script>
-  <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
 
-  <div id="container0" style="height: 400px; width: 600px;"></div>
-  <div id="container1" style="height: 400px; width: 600px;"></div>
-  <div id="container2" style="height: 400px; width: 600px;"></div>
-  <div id="container3" style="height: 400px; width: 600px;"></div>
 
-  <script>
-    <% @data.each_with_index do |data, index| %>
-    <% titles = %w[yearly monthly weekly daily] %>
-    Highcharts.chart('<%= "container#{index}" %>', {
+<div id="chart-container" data-historical-prices="<%= @data.to_json %>" style="height: 330px; width: 600px;"></div>
+<div class="time-periods">
+  <h4 id="one-day" class="btn btn-success time-button">1D</h4>
+  <h4 id="one-week" class="btn btn-success time-button">1W</h4>
+  <h4 id="one-month" class="btn btn-success time-button">1M</h4>
+  <h4 id="one-year" class="btn btn-success time-button">1Y</h4>
+</div>
 
-      chart: {
-        type: 'area'
-      },
-
-      title: {
-        text: '<%= "#{titles[index]} data" %>'
-      },
-
-      xAxis: {
-        visible : false,
-        type: 'datetime',
-        labels: {
-          format: '{value:%Y-%b-%e}'
-        },
-      },
-
-      yAxis: {
-        visible : false
-      },
-
-      tooltip: {
-        pointFormat: 'USD{point.y}',
-        shared: true
-      },
-
-      legend: {
-        enabled: false
-      },
-      series: [{
-        name : "|",
-        data: <%= data %>,
-        lineColor: '#60cd44',
-        color: '#60cd44',
-        fillOpacity: 0.5,
-        marker: {
-          enabled: false
-        },
-        threshold: null
-      }]
-
-    });
-  <% end %>
-  </script>
