--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,6 @@
   <%= action_cable_meta_tag %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_pack_tag 'application' %>
 </head>
 <body>
   <% if current_user %>
@@ -19,8 +17,12 @@
   <%= render 'shared/navbar_croker_sign_up' %>
   <% end %>
   <%= render 'shared/flashes' %>
-  <%= yield %>
+  <div style="min-height: calc(100vh - 130px);">
+    <%= yield %>
+  </div>
 
   <%= render 'shared/slim_footer' %>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_pack_tag 'application' %>
 </body>
 </html>
